# web-server-rust

./: .gitignore  Cargo.toml
src/: main.rs
src/api/: mod.rs
src/controller/: mod.rs  talent.rs
src/entity/: entities.rs
src/models/: talent.rs
src/repository/: talent.rs
src/router/: api.rs
src/services/: mod.rs  talent.rs
