[package]
name = "web-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
env_logger = "0.9.0"
mongodb = "2.0.0-beta.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
bson = "1.2.2"
futures = "0.3"